monolithic/deploy/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: insights-on-prem-poc
  labels:
    name: insights-on-prem-poc
