monolithic/deploy/insights.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insights-on-prem
spec:
  replicas: 1
  template:
    metadata:
      name: insights-on-prem
      labels:
        app: insights-on-prem
    spec:
      serviceAccountName: insights-on-prem
      containers:
      - name: insights-on-prem
        image: quay.io/ccxdev/insights-on-premise-poc:latest
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        volumeMounts:
        - name: server-cert
          mountPath: /tls
          readOnly: true
        - name: client-ca
          mountPath: /tls/client-ca
          readOnly: true
      volumes:
      - name: server-cert
        secret:
          secretName: insights-on-prem-server-tls
      - name: client-ca
        secret:
          secretName: insights-on-prem-client-ca
          items:
          - key: tls.crt
            path: ca.crt
      imagePullSecrets:
      - name: jipapous-insights-on-prem-pull-secret
  selector:
    matchLabels:
      app: insights-on-prem
