monolithic/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: insights-on-prem
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: insights-on-prem-tls
spec:
  selector:
    app: insights-on-prem
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
    name: https
  type: ClusterIP
