monolithic/deploy/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: insights-on-prem
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: insights-on-prem
